# xvidcap

./: .anjuta_sym_db.db  .cproject  .project  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  net.jarre_de_the.Xvidcap.service
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: makefile
Debug/src/: app_data.d  capture.d  subdir.mk
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
debian/: Makefile.in
doc/: Makefile.in
doc/man/: Makefile.in
doc/man/C/: Makefile.in  xvidcap-dbus-client.1  xvidcap.1
doc/man/de/: Makefile.in  xvidcap-dbus-client.1  xvidcap.1
doc/man/es/: Makefile.in  xvidcap.1
doc/man/it/: Makefile.in  xvidcap.1
doc/xvidcap/: Makefile.in
doc/xvidcap/C/: Makefile.in
doc/xvidcap/de/: .xml2po.mo  Makefile.in  xvidcap.xml
doc/xvidcap/es/: Makefile.in
doc/xvidcap/it/: .xml2po.mo  Makefile.in  xvidcap.xml
po/: de.gmo  en.gmo  en.po
src/: Makefile.am  Makefile.in  app_data.c  app_data.h  capture.c  capture.h  codecs.c  codecs.h  colors.c  colors.h  control.h  dbus-server-object.c  eggtrayicon.c  eggtrayicon.h  gnome-xvidcap.glade  gnome_options.c  gnome_options.h  gnome_ui.c  gnome_ui.h  job.c  job.h  macros.h  main.c  options.c  preferences.c  preferences.h  xtoffmpeg.c
